--- a/admin.html
+++ b/admin.html
@@ -14,7 +14,6 @@
 <link href="css/style.min.css" rel="stylesheet">
 </head>
 
-  
 <body>
 
 <div class="lyear-layout-web">
@@ -38,6 +37,8 @@
                 <li> <a class="multitabs" href="view/admin/xiao_manage.php">管理奖品</a> </li>
                 <li> <a class="multitabs" href="view/admin/xiao_logs.php">抽奖记录</a> </li>
                 <li> <a class="multitabs" href="view/admin/xiao_email.php">邮箱设置</a> </li>
+                <li> <a class="multitabs" href="view/admin/xiao_kami.php">卡密开关</a> </li>
+                <li> <a class="multitabs" href="view/admin/xiao_kamilist.php">卡密管理</a> </li>
                 <li> <a class="multitabs" href="view/admin/xiao_admin.php">账号修改</a> </li>
                 <li> <a class="multitabs" href="view/admin/xiao_set.php">网站信息</a> </li>
               </ul>
@@ -71,7 +72,7 @@
           <ul class="topbar-right">
             <li class="dropdown dropdown-profile">
               <a href="javascript:void(0)" data-toggle="dropdown">
-                <img class="img-avatar img-avatar-48 m-r-10" src="images/users/avatar.jpg" alt="云猫" />
+                <img class="img-avatar img-avatar-48 m-r-10" src="https://lwcat.cn/usr/uploads/2024/11/2355151515.jpg" alt="云猫" />
                 <span>云猫 <span class="caret"></span></span>
               </a>
               <ul class="dropdown-menu dropdown-menu-right">
